# archiver-api

./: .dockerignore  .drone.yml  .env  .gitignore  BUILD  CIDockerfile  Cargo.toml  DieselDockerfile  Dockerfile  LocalDockerfile  Makefile  README.md  Rocket.toml  SccacheDockerfile  WORKSPACE  bazel-notes.md  crates.bzl  default.nix
.github/workflows/: archiver-api-build.yml  ci-build.yml  diesel-cli-build.yml  sccache-build.yml  test.yml
cargo/: BUILD  Cargo.toml  crates.bzl
cargo/remote/: atty-0.2.13.BUILD  base64-0.9.3.BUILD  cc-1.0.46.BUILD  cc-1.0.47.BUILD  chrono-0.4.9.BUILD  cookie-0.11.1.BUILD  devise_codegen-0.2.0.BUILD  devise_core-0.2.0.BUILD  diesel_derives-1.4.1.BUILD  filetime-0.2.7.BUILD  filetime-0.2.8.BUILD  fsevent-0.4.0.BUILD  fsevent-sys-2.0.1.BUILD  hermit-abi-0.1.3.BUILD  hyper-0.10.16.BUILD  inotify-0.6.1.BUILD  inotify-sys-0.1.3.BUILD  iovec-0.1.4.BUILD  lazycell-1.2.1.BUILD  log-0.4.8.BUILD  mime-0.2.6.BUILD  mio-0.6.19.BUILD  mio-extras-2.0.5.BUILD  net2-0.2.33.BUILD  notify-4.0.14.BUILD  num-integer-0.1.41.BUILD  num-traits-0.2.10.BUILD  num_cpus-1.10.1.BUILD  num_cpus-1.11.1.BUILD  openssl-0.10.26.BUILD  openssl-sys-0.9.53.BUILD  pear_codegen-0.1.2.BUILD  pkg-config-0.3.16.BUILD  proc-macro2-0.4.30.BUILD  rand-0.4.6.BUILD  rand_core-0.4.2.BUILD  ring-0.13.5.BUILD  rocket-0.4.2.BUILD  rocket_codegen-0.4.2.BUILD  rocket_contrib-0.4.2.BUILD  (+16 more)
migrations/2019-08-10-220521_create_archives/: down.sql  up.sql
remote/: atty-0.2.13.BUILD  autocfg-0.1.5.BUILD  base64-0.9.3.BUILD  cc-1.0.38.BUILD  chrono-0.4.7.BUILD  devise-0.2.0.BUILD  devise_core-0.2.0.BUILD  diesel-1.4.2.BUILD  diesel-1.4.3.BUILD  diesel_derives-1.4.0.BUILD  filetime-0.2.5.BUILD  fsevent-0.4.0.BUILD  fsevent-sys-2.0.1.BUILD  fuchsia-zircon-0.3.3.BUILD  hyper-0.10.16.BUILD  idna-0.1.5.BUILD  inotify-0.6.1.BUILD  inotify-sys-0.1.3.BUILD  iovec-0.1.2.BUILD  libc-0.2.60.BUILD  libc-0.2.65.BUILD  log-0.3.9.BUILD  log-0.4.8.BUILD  mio-0.6.19.BUILD  net2-0.2.33.BUILD  notify-4.0.12.BUILD  notify-4.0.14.BUILD  num-traits-0.2.8.BUILD  num_cpus-1.10.1.BUILD  openssl-0.10.24.BUILD  openssl-0.10.25.BUILD  openssl-sys-0.9.48.BUILD  openssl-sys-0.9.52.BUILD  pear-0.1.2.BUILD  pear_codegen-0.1.2.BUILD  pkg-config-0.3.15.BUILD  pq-sys-0.4.6.BUILD  rand-0.4.6.BUILD  ring-0.13.5.BUILD  rocket_codegen-0.4.2.BUILD  (+24 more)
scripts/: build.sh
src/: archive.rs  lib.rs  main.rs  responses.rs  schema.rs
src/authn/: authentication.rs
src/db/: archive.rs  mod.rs
