[package]
name = "archiver_api"
version = "0.1.0"
authors = ["nhyne <nhyne@nhyne.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.2"
rocket_codegen = "0.4.2"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
chrono = { version = "0.4", features = ["serde"] }

[dependencies.rocket_contrib]
version = "*"
default-features = false
features = ["json"]
