[package]
name = "archiver_api"
version = "0.1.0"
authors = ["nhyne <nhyne@nhyne.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# web server
rocket = "0.4.2"
rocket_codegen = "0.4.2"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"

# database
diesel = { version = "1.0.0", features = ["postgres"] }
dotenv = "0.9.0"

# data types
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "0.7", features = ["serde", "v4"] }

[dependencies.rocket_contrib]
version = "*"
default-features = false
features = ["json"]
